2010-04-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix per-Makefile.am setting of -Werror.
	Before this patch, 'AUTOMAKE_OPTIONS = -Werror' in one
	Makefile.am would carry over to other Makefile.am files
	treated afterwards by the same thread, causing inconsistent
	and unstable exit status values.
	* lib/Automake/Channels.pm (dup_channel_setup)
	(drop_channel_setup): Save and restore the setting of
	$warnings_are_errors.
	* tests/werror3.test: New test.
	* tests/Makefile.am: Adjust.
	* NEWS: Update.

2010-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Avoid possible false negatives in cond46.test.
	* tests/cond46.test: Enable shell `errexit' flag (and bumped
	copyright years).  Due to this change, the testcase should now
	fail on unexpected failures in calls to $ACLOCAL/$AUTOMAKE (whose
	outcomes were previously unchecked), and on failures in grepping
	the expected diagnostic in Automake stderr.

	Make test `aclocal3.test' stricter.
	* tests/aclocal3.test: Add call to `set -e'.  Fail if $ACLOCAL
	succeds unexpectedly.

	Add tests checking that symlinks are resolved by `make dist'.
	* tests/distlinks.test: New test.
	* tests/Makefile.am (TESTS): Updated accordingly.
	Suggested by observations from Ralf Wildenhues.

2010-04-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Use -9 for maximum xz compression with dist-xz.
	* lib/am/distdir.am (dist-xz, dist, dist-all): Pass -9 to xz.
	* NEWS, THANKS: Update.
	Report by Pavel Sanda.

2010-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Avoid possible false negatives in cond46.test.
	* tests/cond46.test: Enable shell `errexit' flag (and bumped
	copyright years).  Due to this change, the testcase should now
	fail on unexpected failures in calls to $ACLOCAL/$AUTOMAKE (whose
	outcomes were previously unchecked), and on failures in grepping
	the expected diagnostic in Automake stderr.

2010-04-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
