@@ -1,5 +1,9 @@
 2010-04-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Fix connected warnings about obsolete exeext override.
+	* lib/Automake/Rule.pm (define): Merge two warnings that belong
+	together, by setting the 'partial' flag for the first one.
+
 	Fix per-Makefile.am setting of -Werror.
 	Before this patch, 'AUTOMAKE_OPTIONS = -Werror' in one
 	Makefile.am would carry over to other Makefile.am files
